Fix Change bad ratio image of logo & scrollbar & remove cropper limite

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -142,6 +142,32 @@ body {
 
 
 
+#div_A::-webkit-scrollbar,
+#div_B::-webkit-scrollbar,
+#div_C::-webkit-scrollbar,
+#div_D::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+
+
+/* Handle */
+#div_A::-webkit-scrollbar-thumb,
+#div_B::-webkit-scrollbar-thumb,
+#div_C::-webkit-scrollbar-thumb,
+#div_D::-webkit-scrollbar-thumb {
+    background: #2e3092;
+    border-radius: 8px;
+}
+
+/* Handle on hover */
+#div_A::-webkit-scrollbar-thumb:hover,
+#div_B::-webkit-scrollbar-thumb:hover,
+#div_C::-webkit-scrollbar-thumb:hover,
+#div_D::-webkit-scrollbar-thumb:hover {
+    background: #191b75;
+}
 
 
 
@@ -236,7 +262,7 @@ div#sidebar-content-header {
 }
 
 .sidetitle img {
-    height: 80px;
+    /* height: 80px; */
     /* width: 120px; */
 }
 
