--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -236,7 +236,7 @@ div#sidebar-content-header {
 }
 
 .sidetitle img {
-    height: 80px;
+    /* height: 80px; */
     /* width: 120px; */
 }
 
@@ -284,6 +284,33 @@ body {
 
 nav.navbar.navbar-expand-md.navbar-light.bg-white.shadow-sm {
     background-color: #2e3092 !important;
+}
+
+#div_A::-webkit-scrollbar,
+#div_B::-webkit-scrollbar,
+#div_C::-webkit-scrollbar,
+#div_D::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+
+
+/* Handle */
+#div_A::-webkit-scrollbar-thumb,
+#div_B::-webkit-scrollbar-thumb,
+#div_C::-webkit-scrollbar-thumb,
+#div_D::-webkit-scrollbar-thumb {
+    background: #2e3092;
+    border-radius: 8px;
+}
+
+/* Handle on hover */
+#div_A::-webkit-scrollbar-thumb:hover,
+#div_B::-webkit-scrollbar-thumb:hover,
+#div_C::-webkit-scrollbar-thumb:hover,
+#div_D::-webkit-scrollbar-thumb:hover {
+    background: #191b75;
 }
 
 
